# gpgpu-experiments

./: CMakeLists.txt  README.md  bitReverse.cpp  cplx.c  cpu_fft.cpp  cpu_fft_norecursion.cpp  error_check.cpp  main.cpp  main_add_1024_ints.cpp  main_fft_8_floats.cpp  main_fft_8_floats_stockham.cpp  main_fft_huge_floats_local_twiddles.cpp  main_fft_huge_floats_stockham_local_twiddles.cpp  main_fft_many_floats.cpp  main_fft_many_floats_local.cpp  main_fft_many_floats_local_twiddles.cpp  main_fft_many_floats_local_twiddles_separate.cpp  main_fft_many_floats_stockham.cpp  main_fft_many_floats_stockham_twiddles.cpp  main_fft_many_floats_stockham_twiddles_images.cpp  main_fft_many_floats_stockham_twiddles_separate.cpp  main_mix_8_floats.cpp  math.cpp  rand.cpp  read_kernel_source.cpp  vector_add_kernel.cl  vector_fft_floats.cl  vector_fft_floats_huge_local_coalesce_shifts_twiddles.cl  vector_fft_floats_multi.cl  vector_fft_floats_multi_local.cl  vector_fft_floats_multi_local_coalesce.cl  vector_fft_floats_multi_local_coalesce_shifts_twiddles.cl  vector_fft_floats_multi_local_coalesce_shifts_twiddles_separate.cl  vector_fft_floats_multi_local_coalesce_shifts_twiddles_separatebis.cl  vector_fft_floats_multi_local_shifts.cl  vector_fft_floats_multi_local_shifts_peel.cl  vector_fft_floats_multi_local_shifts_twiddles.cl  vector_fft_floats_multi_local_shifts_twiddles_constantinput.cl  vector_fft_floats_multi_local_shifts_twiddlesconstant.cl  vector_fft_floats_multi_local_writeback.cl  (+9 more)
